# routes/books.js
@@ -10,5 +10,12 @@ const { isAuthenticated } = require('../validation/authenticate');
 
 router.get('/', bookController.getAll);
 
+router.get('/:id', bookController.getSingle);
+
+router.post('/', bookController.createBook);
+
+router.post('/:id', bookController.updateBook);
+
+router.delete('/:id', bookController.deleteBook);
 
 module.exports = router
